package exception;

public class TravelDiaryException extends Exception{
    public TravelDiaryException(String message) {
        super(message);
    }
}
